[package]
name = "krct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "krct"
harness = false

[[bench]]
name = "benchmark"
harness = false

[dependencies.paw]
version = "1.0"

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.csv]
version = "1.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.thiserror]
version = "1.0"

[dev-dependencies.tempfile]
version = "3.3"

[dev-dependencies.async-trait]
version = "0.1"

[dev-dependencies.cucumber]
version = "0.12"

[dev-dependencies.tokio]
version = "1.17"
features = ["macros", "rt-multi-thread", "time"]

[dev-dependencies.pretty_assertions]
version = "1.1"

[dev-dependencies.criterion]
version = "0.3"

[dev-dependencies.rand]
version = "0.8"
